src/components/home/Nav.module.scss
@use "@/styles/variables" as *;

.mobileNav {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: min(100%, 50rem);
    padding: var(--space-xxl) 5vw;

        .navBtn {
        background-color: var(--color-surface);
        color: var(--color-primary);
        border-radius: var(--br-sm);
        border: 1px solid var(--color-primary);
        width: 100%;
        padding-block: var(--space-sm);
        font-weight: 600;
        font-size: var(--fs-reg);
        box-shadow: var(--elevated-shadow);
        display: flex;
        justify-content: center;
        align-items: center;
        text-decoration: none;
        transition: background-color 0.4s ease, color 0.4s ease, border 0.4s ease, box-shadow 0.4s ease;

        &:nth-child(2) {
            background-color: var(--color-accent);
            color: var(--color-bg);
        }
    }
}

.navBar {
    width: 100vw;
    background-color: var(--color-surface);
    position: sticky;
    left: 0;
    top: 0;
    height: 4.5rem;
    z-index: 10;
    display: none;
    align-items: center;
    padding-inline: 3rem;

    .nameAndNav {
        position: absolute;
        display: flex;
        align-items: center;
        gap: var(--space-xxxxl);
        left: -19rem;
        transition: transform 0.4s ease;
        &.inView {
            transform: translateX(21rem);
        }

        .nameDropin {
            font-family: var(--font-heading);
            font-size: var(--fs-subheading);
            font-weight: 600;

            > span {
                color: var(--color-accent);
            }

            
        }

        .desktopNav {
            display: none;
            gap: var(--space-xxl);
            font-size: var(--fs-med);
        
            .navBtn {
                font-family: var(--font-tech);
                text-transform: lowercase;
                color: var(--color-secondary);
                text-decoration: none;
        
                &:nth-child(2) {
                    color: var(--color-accent);
        
                    &::before, &::after {
                        content: '/';
                        color: var(--color-secondary);
                    }
                    
                    &::before {
                        padding-right: var(--space-lg);
                    }
        
                    &::after {
                        padding-left: var(--space-lg);
                    }
                }
            }    
        }
    }
}





@media (min-width: $desktop) {

    .mobileNavWrapper {
        display: none;
    }
    .mobileNav {
        display: none;
    }

    
    
    .navBar {
        display: flex;

        .nameAndNav {
            
            
            .desktopNav {
                display: flex;
            }
        }
    }
}

[data-theme="dark"] {
    .mobileNav {
        
        .navBtn {
            border: 1px solid rgba(255, 255, 255, 0.3);
            box-shadow: var(--shadow-accent)
        }
    }

    
}

